Fix rate bug Add more form detail error Cleaning for release

--- a/Chrome Extension/asset/css/main.css
+++ b/Chrome Extension/asset/css/main.css
@@ -703,7 +703,11 @@ filter: alpha(opacity=99); */
 }
 
 #form_login {
-    margin-top: 30px;
+    /*margin-top: 30px;*/
+}
+
+.btn-register{
+    margin-left: 12px;
 }
 
 #displaycurrentkey {
