Fix bug in the reset button

--- a/Chrome Extension/asset/css/main.css
+++ b/Chrome Extension/asset/css/main.css
@@ -598,8 +598,8 @@ filter: alpha(opacity=99); */
 }
 
 .addressselect {
-    margin-left: 10px;
-    width: 240px;
+   /* margin-left: 10px;
+    width: 240px;*/
 }
 
 .movetowallet {
