Add error message if wrong password change layout for error message when sending coins

--- a/Chrome Extension/asset/css/main.css
+++ b/Chrome Extension/asset/css/main.css
@@ -767,3 +767,11 @@ button, .btn {
     line-height: 1.4;
     text-align: center;
 }
+
+.text-danger {
+    color: #FF0500;
+}
+
+.text-danger:hover {
+    color: #FF0500;
+}
