Fix a bug in the label renaming Add animation to the info layer of the playing card

--- a/Chrome Extension/asset/css/main.css
+++ b/Chrome Extension/asset/css/main.css
@@ -828,7 +828,11 @@ button, .btn {
     display:none;
 }
 
-.card_bg:hover  .datainfo, .is-expanded .datainfo  {
+/*.card_bg:hover  .datainfo, .is-expanded .datainfo  {
+    display:block;
+}*/
+
+.is-expanded .datainfo  {
     display:block;
 }
 
